Typeuser Model and Controller
