# app/Http/Controllers/TypeUserController.php
@@ -8,11 +8,80 @@ use Illuminate\Http\Request;
 
 class TypeUserController extends Controller
 {
+
+    /**
+     * @OA\Get(
+     *     path="/api/typeuser",
+     *     tags={"Type User"},
+     *     summary="List Type User",
+     *     operationId="index",
+     *     security={{"sanctum":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of Type User",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/TypeUser")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *         ),
+     *     ),
+     * )
+     */
     public function index()
     {
         return TypeUser::all();
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/typeuser",
+     *     tags={"Type User"},
+     *     summary="Create Type User",
+     *     operationId="store",
+     *     security={{"sanctum":{}}},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"name"},
+     *             @OA\Property(property="name", type="string", example="Admin"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Type User created successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/TypeUser")
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="The given data was invalid",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *              @OA\Property(
+     *                  property="errors",
+     *                  type="object",
+     *                  @OA\Property(
+     *                      property="name",
+     *                      type="array",
+     *                      @OA\Items(type="string", example="The name field is required.")
+     *                  ),
+     *              ),
+     *         ),
+     *     ),
+     * )
+     */
     public function store(Request $request)
     {
 //        Validate data
@@ -24,6 +93,45 @@ class TypeUserController extends Controller
         return TypeUser::create($request->all());
     }
 
+
+    /**
+     * @OA\Get(
+     *     path="/api/typeuser/{id}",
+     *     tags={"Type User"},
+     *     summary="Show Type User",
+     *     operationId="show",
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="Type User ID",
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Show Type User",
+     *         @OA\JsonContent(ref="#/components/schemas/TypeUser")
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Type User not found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Type User not found")
+     *         ),
+     *     ),
+     * )
+     */
     public function show(int $id)
     {
 //        Find Type User
@@ -35,10 +143,81 @@ class TypeUserController extends Controller
             );
         }
 
-        return $typeUser->load('access', 'hasPermission');
+//        LOAD ACCESS AND PERMISSIONS
+        $access = $typeUser->getAccess($id);
+        $hasPermission = $typeUser->getHasPermission($id);
+
+        $typeUser = $typeUser->toArray();
+        $typeUser['access'] = $access;
+        $typeUser['hasPermission'] = $hasPermission;
+
+        return $typeUser;
     }
 
 
+    /**
+     * @OA\Put(
+     *     path="/api/typeuser/{id}",
+     *     tags={"Type User"},
+     *     summary="Update Type User",
+     *     operationId="update",
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *     name="id",
+     *     in="path",
+     *     required=true,
+     *     description="Type User ID",
+     *     @OA\Schema(
+     *         type="integer",
+     *         format="int64"
+     *     ),
+     *     example=1
+     * ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"name"},
+     *             @OA\Property(property="name", type="string", example="Admin"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Type User updated successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/TypeUser")
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Type User not found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Type User not found")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="The given data was invalid",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *              @OA\Property(
+     *                  property="errors",
+     *                  type="object",
+     *                  @OA\Property(
+     *                      property="name",
+     *                      type="array",
+     *                      @OA\Items(type="string", example="The name field is required.")
+     *                  ),
+     *              ),
+     *         ),
+     *     ),
+     * )
+     *
+     */
     public function update(Request $request, int $id)
     {
 //        Find Type User
@@ -62,6 +241,54 @@ class TypeUserController extends Controller
 
     }
 
+    /**
+     * @OA\Delete(
+     *     path="/api/typeuser/{id}",
+     *     tags={"Type User"},
+     *     summary="Delete Type User",
+     *     operationId="destroy",
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="Type User ID",
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Type User deleted successfully",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Type User deleted successfully")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Type User not found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Type User not found")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=409,
+     *         description="Type User has accesses or permissions associated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Type User has accesses associated")
+     *         ),
+     *     )
+     * )
+     *
+     */
     public function destroy(int $id)
     {
 //        Find Type User
